
icon:check[] OrientDB: The included OrientDB version has been updated to version `3.0.28`

icon:check[] Core: The handler for webroot updates is now running in a worker thread. This will prevent "Thread blocked" messages in the log.

icon:check[] Core: The debuginfo endpoint now correctly includes the `default-distributed-db-config.json` file.

[[v1.4.0]]
== 1.4.0 (24.01.2020)

icon:plus[] Security: User client certificate handling has been added to the Mesh Server.

The following settings have been added:

  * `server.sslPort` (Env: `MESH_HTTPS_PORT`) - SSL Port (Default: **8443**)
  * `server.http` (Env: `MESH_HTTP_ENABLE`) - Flag to enable http server (Default: **true**)
  * `server.clientAuthMode` (Env: `MESH_HTTP_SSL_CLIENT_AUTH_MODE`) - Authentication mode to control how client certificates should be handled. (Default: **none**)
  * `server.trustedCertPaths` (Env: `MESH_HTTP_SSL_TRUSTED_CERTS`) - List of certificates which will be trusted by the server.

The Gentics Mesh HTTPs server supports three client authentication modes:

* `none` - Reject client certificates during SSL handshake (**default**)
* `request` - Request client certificate. A client certificate will be used when provided. The request will also work when omitting the client cert.
* `require` - Requiring a client certificate. The ssl handshake will fail when no client certificate was provided.

More information can be found in the link:{{< relref "references.asciidoc" >}}#_https[HTTPs server section].

icon:plus[] Java Rest Client: The client configuration has been enhanced. It is now possible to specify a client certificate and key to be used by the REST client.

The following methods have been added to the config builder for `MeshRestClientConfig`:  

Methods to set the client key which will be used during SSL handshake:

  * `MeshRestClientConfig.Builder#setClientKey(String path)`
  * `MeshRestClientConfig.Builder#setClientKey(InputStream ins)` 