@@ -46,6 +46,8 @@ icon:check[] Core: The handler for webroot updates is now running in a worker th
 
 icon:check[] Core: The debuginfo endpoint now correctly includes the `default-distributed-db-config.json` file.
 
+icon:check[] GraphQL: Errors during GraphQL queries are now correctly propagated to the client.
+
 [[v1.4.0]]
 == 1.4.0 (24.01.2020)
 
